--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dot-in-progress {
+	border-width: 2px;
+	border-style: solid;
+	box-sizing: border-box;
+}
