--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,11 @@
   background-color: rgb(77 158 207 / var(--tw-bg-opacity));
 }
 
+.bg-warning-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 51 51 / var(--tw-bg-opacity));
+}
+
 .uppercase {
   text-transform: uppercase;
 }
